syntax = "proto3";

package RpcStruct;
option go_package = "./protoObj";


service GameService {
  rpc SayHello (GameRequest) returns (GameReply);
}

message GameRequest {
  string name = 1;
}

message GameReply {
  string message = 1;
}
